syntax = "proto3";

package shanvl.garbage.events.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = ".;eventsv1pb";

// SchoolingService is responsible for the school management such as adding or deleting pupils or changing their classes
service SchoolingService {
    // AddPupils adds the given pupils and returns ids of the added
    rpc AddPupils (AddPupilsRequest) returns (AddPupilsResponse) {
        option (google.api.http) = {
            post: "/v1/pupils"
            body: "*"
        };
    }
    // ChangePupilClass changes the class of the pupil if such a class exists
    rpc ChangePupilClass (ChangePupilClassRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/pupils/{pupil_id}"
            body: "*"
        };
    }
    // RemovePupils removes the pupils with the given IDs
    rpc RemovePupils (RemovePupilsRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/pupils"
        };
    }
}

message AddPupilsRequest {
    message Pupil {
        string first_name = 1;
        string last_name = 2;
        // class name as it is now (class name changes depending on the date)
        string class = 3;
    }
    // pupils to be added
    repeated Pupil pupils = 1;
}

message AddPupilsResponse {
    // ids of the pupils added
    repeated string pupil_ids = 1;
}

message ChangePupilClassRequest {
    string pupil_id = 1;
    // class name as it is now (class name changes depending on the date)
    string class = 2;
}

message RemovePupilsRequest {
    // ids of the pupils deleted
    repeated string pupil_ids = 1;
}
